// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/forms/JurisdictionSelect drills down to locationlevel: Jurisdiction Menu 1`] = `
<div
  class="jurisdiction__menu css-26l3qy-menu"
>
  <div
    class="jurisdiction__menu-list css-4ljt47-MenuList"
  >
    <div
      class="jurisdiction__option jurisdiction__option--is-focused css-1n7v3ny-option"
      id="react-select-10-option-0"
      tabindex="-1"
    >
      Siavonga
    </div>
    <div
      class="jurisdiction__option css-yt9ioa-option"
      id="react-select-10-option-1"
      tabindex="-1"
    >
      Sinda
    </div>
  </div>
</div>
`;

exports[`components/forms/JurisdictionSelect handleChange works with options correctly: Jurisdiction Menu 1`] = `
<div
  class="jurisdiction__menu css-26l3qy-menu"
>
  <div
    class="jurisdiction__menu-list css-4ljt47-MenuList"
  >
    <div
      class="jurisdiction__option jurisdiction__option--is-focused css-1n7v3ny-option"
      id="react-select-5-option-0"
      tabindex="-1"
    >
      Siavonga
    </div>
    <div
      class="jurisdiction__option css-yt9ioa-option"
      id="react-select-5-option-1"
      tabindex="-1"
    >
      Sinda
    </div>
  </div>
</div>
`;

exports[`components/forms/JurisdictionSelect handleChange works without options correctly: Jurisdiction Menu No Options 1`] = `
<div
  class="jurisdiction__menu css-26l3qy-menu"
>
  <div
    class="jurisdiction__menu-list css-4ljt47-MenuList"
  >
    <div
      class="jurisdiction__menu-notice jurisdiction__menu-notice--no-options css-gg45go-NoOptionsMessage"
    >
      No Options
    </div>
  </div>
</div>
`;

exports[`components/forms/JurisdictionSelect renders select options correctly: Jurisdiction Select Props 1`] = `
Object {
  "apiEndpoint": "location/findByProperties",
  "aria-label": "Select",
  "backspaceRemovesValue": true,
  "blurInputOnSelect": true,
  "bsSize": "lg",
  "cacheOptions": true,
  "captureMenuScroll": false,
  "cascadingSelect": true,
  "classNamePrefix": "jurisdiction",
  "closeMenuOnScroll": false,
  "closeMenuOnSelect": false,
  "components": Object {},
  "controlShouldRenderValue": true,
  "defaultOptions": true,
  "defaultProps": Object {
    "apiEndpoint": "location/findByProperties",
    "cascadingSelect": true,
    "handleChange": [Function],
    "handleChangeWithOptions": [Function],
    "handleChangeWithoutOptions": [Function],
    "handleLoadOptionsPayload": [Function],
    "params": Object {
      "is_jurisdiction": true,
      "return_geometry": false,
    },
    "promiseOptions": [Function],
    "serviceClass": [Function],
  },
  "escapeClearsValue": false,
  "filterOption": null,
  "formatGroupLabel": [Function],
  "getOptionLabel": [Function],
  "getOptionValue": [Function],
  "handleChange": [Function],
  "handleChangeWithOptions": [Function],
  "handleChangeWithoutOptions": [Function],
  "handleLoadOptionsPayload": [Function],
  "inputValue": "",
  "isClearable": true,
  "isDisabled": false,
  "isLoading": true,
  "isMulti": false,
  "isOptionDisabled": [Function],
  "isRtl": false,
  "isSearchable": true,
  "loadingMessage": [Function],
  "maxMenuHeight": 300,
  "menuIsOpen": false,
  "menuPlacement": "bottom",
  "menuPosition": "absolute",
  "menuShouldBlockScroll": false,
  "menuShouldScrollIntoView": true,
  "minMenuHeight": 140,
  "name": "jurisdiction",
  "noOptionsMessage": [Function],
  "onChange": [Function],
  "onInputChange": [Function],
  "onMenuClose": [Function],
  "onMenuOpen": [Function],
  "openMenuOnClick": true,
  "openMenuOnFocus": false,
  "options": Array [],
  "pageSize": 5,
  "params": Object {
    "is_jurisdiction": true,
    "return_geometry": false,
  },
  "placeholder": "Select",
  "promiseOptions": [Function],
  "screenReaderStatus": [Function],
  "serviceClass": [Function],
  "styles": Object {},
  "tabIndex": "0",
  "tabSelectsValue": true,
  "value": null,
}
`;

exports[`components/forms/JurisdictionSelect renders select options correctly: Jurisdiction Select Props ownProps 1`] = `
Object {
  "apiEndpoint": "location/findByProperties",
  "aria-label": "Select",
  "bsSize": "lg",
  "cacheOptions": true,
  "cascadingSelect": true,
  "classNamePrefix": "jurisdiction",
  "closeMenuOnSelect": false,
  "defaultMenuIsOpen": false,
  "defaultOptions": true,
  "defaultProps": Object {
    "apiEndpoint": "location/findByProperties",
    "cascadingSelect": true,
    "handleChange": [Function],
    "handleChangeWithOptions": [Function],
    "handleChangeWithoutOptions": [Function],
    "handleLoadOptionsPayload": [Function],
    "params": Object {
      "is_jurisdiction": true,
      "return_geometry": false,
    },
    "promiseOptions": [Function],
    "serviceClass": [Function],
  },
  "filterOption": null,
  "handleChange": [Function],
  "handleChangeWithOptions": [Function],
  "handleChangeWithoutOptions": [Function],
  "handleLoadOptionsPayload": [Function],
  "isClearable": true,
  "isLoading": false,
  "loadOptions": [Function],
  "name": "jurisdiction",
  "noOptionsMessage": [Function],
  "onChange": [Function],
  "params": Object {
    "is_jurisdiction": true,
    "return_geometry": false,
  },
  "placeholder": "Select",
  "promiseOptions": [Function],
  "serviceClass": [Function],
}
`;
